2010-11-04  Sancho Lerena <slerena@artica.es>

	* NT4: New binary version of Unix perl agent for NT4, with some tools.
	.exe compiled with ActiveState SDK 9.0
	
	* pandora_agent: Some small modifications to make it work nicely in 
	windows boxes.

2010-11-02  Raul Mateos  <raulofpandora@gmail.com>

	* tentacle_client: Fixed year from last commit. Converted some spaces
	to tab.

2010-11-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* ChangeLog: uploaded lost lines of my commit of yesterday.

2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* DEBIAN/postinst, DEBIAN/conffiles, DEBIAN/make_deb_package.sh: fixed the
	warning of check md5sum on dir "plugins". Now the dir "plugins" is filled
	postinstall with the package plugins in temp directory, the copy is
	interactive for don't overwrite the user modified plugins of previous
	installation.
	
	Fixes: #3081496

2010-10-19  Junichi Satoh  <junichi@rworks.jp>

	* SunOS/make_solaris_package/prototype: Added nagios_plugin_wrapper.

2010-10-15  Sancho Lerena <slerena@artica.es>

	* plugins/nagios_plugin_wrapper: Added new plugin.

	* pandora_agent: Version update.

2010-10-08  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Pass server_pwd and server_ssl configuration tokens
	  to tentacle. Fixes bug #3080299.

2010-10-07  Ramon Novoa  <rnovoa@artica.es>

	* Linux/pandora_agent.conf: Added an example usage of the
	  agent_threads configuration token.

2010-10-06  Junichi Satoh  <junichi@rworks.jp>

	* pandora_agent: Added FreeBSD specific commands.

2010-10-04  Ramon Novoa  <rnovoa@artica.es>

	* plugins/inventory: Fixed inventory process information.

	* pandora_agent: Fixed an error that showed when no logfile was
	  specified in the agent configuration file.

2010-09-27  Junichi Satoh  <junichi@rworks.jp>

	* FreeBSD/pandora_agent: Fixed a typo.

2010-09-27  Junichi Satoh  <junichi@rworks.jp>

	* FreeBSD/pandora_agent: Changed PID detection method to support
	"jail", FreeBSD virtualization.
